--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <div class="header__dlogo-box">
+        <div class="header__logo-box">
             <img class="header__logo" src="img/logo-white.png" alt="Logo">
         </div>
         <div class="header__text-box">
