--- a/index.html
+++ b/index.html
@@ -27,14 +27,26 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting tours for adventurous people
                 </h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
-                    Text Content
+                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                    <p class="paragraph">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ab, incidunt veritatis harum
+                        nulla neque! Nulla, totam quas, unde sequi officia consequuntur quo obcaecati aliquam repellat
+                        vero quia velit hic.
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                    <p class="paragraph">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ab, incidunt veritatis harum
+                        nulla neque! Nulla, totam quas, unde sequi officia consequuntur quo obcaecati aliquam repellat
+                        vero quia velit hic.
+                    </p>
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     Image Composition
