--- a/index.html
+++ b/index.html
@@ -101,6 +101,30 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="section-tours">
+            <div class="u-center-text u-margin-button-big">
+                <div class="heading-secondary">
+                    Most popular tours
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                .card
+                            </div>
+                            <div class="card__side card__side--back card__side--back-1">
+                                Card Text Back
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+
+                    </div>
+                    <div class="col-1-of-3">
+
+                    </div>
+                </div>
             </div>
         </section>
     </main>
