--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
                             <div class="form__group">
                                 <input type="email" class="form__input" placeholder="Email address" id="email" required>
-                                <label for="email" class="form__label">Full name</label>
+                                <label for="email" class="form__label">Email address</label>
                             </div>
 
                             <div class="form__group u-margin-bottom-medium">
