--- a/index.html
+++ b/index.html
@@ -361,6 +361,28 @@
         </div>
     </footer>
 
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia quas ullam aperiam laborum
+                    suscipit corrupti nesciunt reprehenderit labore. Esse corporis in commodi autem quam expedita aut
+                    veniam quia ipsam cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga
+                    similique veniam voluptatem, quibusdam vitae eaque enim libero, quia, architecto iure error optio
+                    possimus aperiam. Rem, doloremque culpa? Sapiente, vero?
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
